# qemubuild

./: .gitmodules  abuild.cmake  build.cmake  x86_64-w64-mingw32.txt
Dockerfile-mingwlinux/: Dockerfile
Dockerfile-windows/: Dockerfile.mingw
anglembed/: CMakeLists.txt
anglembed/fakepoxy/: CMakeLists.txt  fakepoxy.c  fakepoxy.pc.in
anglembed/fakepoxy/include/epoxy/: egl.h  gl.h
fakepoxy/: CMakeLists.txt  fakepoxy.pc.in
fakepoxy/include/epoxy/: egl.h
